Fix Home wrapper on mobile

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -17,3 +17,10 @@
   padding: 16px;
   width: 100%;
 }
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .margin-small {
+    margin: 0;
+  }
+}
