--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,5 +1,3 @@
-
-
 .content {
   display: flex;
   margin: 0 auto;
@@ -7,9 +5,42 @@
 }
 
 .feed-wrapper {
-  width: 960px;
+  min-width: 960px;
 } 
+
+.sidebar-wrapper {
+  /* min-width: 300px; */
+}
 
 .wrapper {
   background-color: rgb(238, 238, 238);
 }
+
+@media only screen and (max-width: 1400px) {
+  /* .feed-wrapper {
+    min-width: 800px;
+  } */
+}
+
+@media only screen and (max-width: 600px) {
+  .content {
+    all: unset;
+    min-width: 600px;
+  }
+
+  .feed-wrapper {
+    min-width: 0;
+  }
+
+}
+
+/* 
+@media only screen and (max-width: 1140px) {
+  .feed-wrapper {
+    width: 100%;
+  }
+
+  .sidebar-wrapper {
+    display: none;
+  }
+} */
