--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -21,3 +21,12 @@
 .profile-link img{
   margin-left: 8px;
 }
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .wrapper {
+    font-size: 10px;
+  }
+
+  
+}
